# MagicSquare-xx

./: .cursorrules  README.md  pyproject.toml
.cursor/commands/: export-session.md  golden-master.md  green-minimal.md  red-skeleton.md  red-test-plan.md  refactor-safe.md  refactor-smell.md  tdd-red.md
.cursor/skills/magic-square-docs/: SKILL.md  phase-checklist.md  report-template.md  transcript-template.md
.cursor/skills/magic-square-tdd/: SKILL.md
Prompting/: 01.Mom-Test-STEP1-Transcript.md  02.Session3-TDD-RED-Transcript.md
Report/: 01.MagicSquare_ProblemDefinition_Report.md  01.Mom-Test-STEP1-Report.md  02.Session3-TDD-RED-Report.md
docs/: PRD.md
magicxx/: __init__.py  __main__.py  cli.py  rules.py  verify.py
tests/: test_validate_lines.py  test_verify.py
