[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "magicxx"
version = "0.1.0"
description = "4×4 partial magic square verifier"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
magicxx = "magicxx.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["magicxx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
